Correction de Contrast

--- a/assets/style.css
+++ b/assets/style.css
@@ -101,8 +101,8 @@ body {
 	justify-content: center;
 }
 .nav-pills .nav-link.active, .nav-pills .show > .nav-link {
-	color: #fff;
-	background-color: rgb(179, 166, 46);
+	color: #FFFFFF;
+	background-color: #5E5A26;
 	border-radius:0 ;
 }
 .nav-pills .nav-link {
